--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    "build:check": "tsc && vite build",
     "build:analyze": "npm run build && open dist/stats.html",
     "preview": "vite preview",
     "compile": "set TS_NODE_PROJECT=tsconfig.hardhat.json && hardhat compile",
