--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,17 +15,21 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "strict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
 
     /* Path mapping */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    /* Type checking */
+    "types": ["vite/client"]
   },
   "include": ["src"],
+  "exclude": ["node_modules", "dist", "build", "scripts", "hardhat.config.cts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
